# python-engineer-test-project

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  requirements.txt
app/: app.py  config.py  extensions.py  main.py  models.py  serializers.py  views.py
